--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@
       name: 'RunTerraform'
       displayName: 'RunTerraform'
       env: 
-        #arm_subscription_id: "f0b8a631-62c7-4583-bd96-9515606409f5"
-        #arm_client_id      : "5943fc72-c94e-4a8f-b62c-a3c46cec0a0e"
-        #arm_client_secret  : "b4JOGWI63_04-Dlfa..qu2_BCvmkgNQ~PR"
-        #arm_tenant_id      : "932d69f5-a800-4527-9dcf-eabfe5c25af4"
+        ARM_CLIENT_ID       : $(ARM_CLIENT_ID)
+        ARM_CLIENT_SECRET   : $(ARM_CLIENT_SECRET)
+        ARM_SUBSCRIPTION_ID : $(ARM_SUBSCRIPTION_ID)
+        ARM_TENANT_ID       : $(ARM_TENANT_ID)
