--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,6 +3,12 @@
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
 
+trigger:
+- master
+
+resources:
+- repo: self
+
 - stage : Provision
   displayName: 'Terrafrom wirh Azure Devops'
   jobs:
