Corrigue gatilladores para ramas

--- a/azure-pipelines-destroy.yml
+++ b/azure-pipelines-destroy.yml
@@ -4,8 +4,12 @@
 # https://aka.ms/yaml
 
 trigger:
-- destroy
-
+  branches:
+    include:
+    - destroy
+    exclude:
+    - develop
+    - master
 stages:
 - stage: Undeploy
   displayName: 'Terrafrom wirh Azure Devops'
