--- a/azure-pipelines-build.yml
+++ b/azure-pipelines-build.yml
@@ -4,8 +4,12 @@
 # https://aka.ms/yaml
 
 trigger:
-- master
-
+  branches:
+    include:
+    - master
+    exclude:
+    - develop
+    - destroy
 stages:
 - stage: Deploy
   displayName: 'Terrafrom wirh Azure Devops'
