Corrigue gatilladores para ramas v4

--- a/azure-pipelines-build.yml
+++ b/azure-pipelines-build.yml
@@ -10,6 +10,14 @@ trigger:
     exclude:
     - develop
     - destroy
+pr:
+  branches:
+    include:
+    - releases/*
+    exclude:
+    - master
+    - develop
+    - destroy
 stages:
 - stage: Deploy
   displayName: 'Terrafrom wirh Azure Devops'
